# mais

./: .bazelrc  .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  ai_tool_maker.py  bazel-mais  main.cpp  soul.txt  tools.json  tools.txt
bazel/: BUILD  cargo-bazel-lock.json  version.bzl
dynamic_tools/: google_news_search.py  google_news_search_args.json  list_current_directory_files.py  list_directory_and_size.py  list_large_files.py  plot_function.py  registry.json  search_location.py  search_web.py
rust_server/: Cargo.toml  DEVELOPER_GUIDE.md
rust_server/src/: agentic.rs  ffi.rs  handlers.rs  main.rs  tools.rs  utils.rs
rust_ui/: Cargo.toml  DEVELOPER_GUIDE.md  run.sh
rust_ui/src/: app.rs  events.rs  main.rs  settings.rs  ui.rs
scratch/: test_registration.py  test_stream.py
