[package]
name = "rust_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
crossterm = { version = "0.27" }
ratatui = { version = "0.26" }
colored = { version = "2.1" }
clap = { version = "4.5", features = ["derive"] }
futures-util = { version = "0.3" }

[workspace]
